# Visual_without_ros

./: .gitignore  CMakeLists.txt  README.md
include/: foxglove_bridge.h  slam_processor.h
scripts/: fetch_and_prepare_foxglove.sh
src/: foxglove_bridge.cpp  main.cpp  slam_processor.cpp
